--- a/static/less/style.less
+++ b/static/less/style.less
@@ -127,21 +127,30 @@ body {
 			padding-bottom: 10px;
 		}
 		
-		#chat-content {
-			height: 300px;
-			overflow-y: scroll;
-			word-wrap: break-word;
-			bottom: 0px;
-			padding: 0 5px;
-			padding-bottom: 50px;
-			
-			span {
-				font-size: 10px;
-				opacity: .5;
-				border-bottom: 1px solid #666;
-			}
-		}
+		#chat-container {
 		
+			.info {
+				text-align: center;
+				font-size: 11px;
+				opacity: .5;
+			}
+		
+			#chat-content {
+				height: 300px;
+				overflow-y: scroll;
+				word-wrap: break-word;
+				bottom: 0px;
+				padding: 0 5px;
+				padding-bottom: 50px;
+				
+				span {
+					font-size: 10px;
+					opacity: .5;
+					border-bottom: 1px solid #666;
+				}
+			}
+		}		
+
 		#talk {
 			border-top: 1px solid #ccc;
 			margin-top: 10px;
